--- a/.azure-pipelines/weekly-generation.yml
+++ b/.azure-pipelines/weekly-generation.yml
@@ -13,7 +13,7 @@ parameters:
   default: 1es-windows-ps-compute-m
 - name: BaseBranch
   displayName: Base Branch
-  default: dev
+  default: main
 - name: SkipForceRefresh
   displayName: Skip Force Refresh
   default: false
@@ -46,7 +46,7 @@ schedules:
   displayName: "PS SDK Weekly Refresh"
   branches:
     include:
-    - dev
+    - main
   always: true
 resources:
   repositories:
