Separate weekly open api -doc refresh and command metadata refresh

--- a/.azure-pipelines/common-templates/download-openapi-docs.yml
+++ b/.azure-pipelines/common-templates/download-openapi-docs.yml
@@ -73,24 +73,18 @@ steps:
           $diff = git diff --name-only
           $ModulesWithChanges = @{}
           $diff | %{
-            if (($_ -match 'openApiDocs\/(v1.0|beta)\/(.*).yml') -and !$ModulesWithChanges.ContainsKey($matches.2))
-            {
-              $ModulesWithChanges.Add($matches.2, $matches.1)
+            if ($_ -match 'openApiDocs\/(v1.0|beta)\/(.*)\.yml') {
+              $version = if ($matches[1] -eq 'v1.0') { 'v1.0' } else { 'beta' }
+              $moduleName = "$($matches[2])_$version"
+              if (!$ModulesWithChanges.ContainsKey($moduleName)) {
+                $ModulesWithChanges.Add($moduleName, $matches[1])
+              }
             }
           }
           $ModuleNames = $ModulesWithChanges.Keys
+          Write-Host "Modules with changes: $ModuleNames"
         }
         Write-Host "##vso[task.setvariable variable=ModulesWithChanges;isOutput=true]$ModuleNames"
-
-  - task: PowerShell@2
-    name: CalculateAndBumpModuleVersion
-    displayName: Calculate and bump module version
-    condition: and(succeeded(), ne(variables['OpenAPIDocDiff.ModulesWithChanges'], ''))
-    inputs:
-      pwsh: true
-      targetType: inline
-      script: |
-        . "$(System.DefaultWorkingDirectory)\tools\Versions\BumpModuleVersion.ps1" -BumpV1Module -BumpBetaModule -BumpAuthModule -Debug
 
   - task: PowerShell@2
     name: BuildOpenApiMetadataDetectionTool
