--- a/.azure-pipelines/common-templates/create-pr.yml
+++ b/.azure-pipelines/common-templates/create-pr.yml
@@ -4,7 +4,7 @@
 parameters:
   - name: BaseBranch
     type: string
-    default: dev
+    default: main
   - name: TargetBranch
     type: string
     default: ""
