--- a/.github/workflows/metadatachanges.yml
+++ b/.github/workflows/metadatachanges.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-      - dev
+      - main
     paths:
       - openApiDocs/**
       - src/Authentication/Authentication/custom/common/MgCommandMetadata.json
