chore(ci): permit reading from npm

--- a/.azure-pipelines/sdk-release.yml
+++ b/.azure-pipelines/sdk-release.yml
@@ -46,6 +46,8 @@ extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
     pool: $(BuildAgent)
+    settings:
+      networkIsolationPolicy: Npm
     sdl:
       binskim:
         enabled: false
