chore(ci): set network isoloation to permissive

--- a/.azure-pipelines/sdk-release.yml
+++ b/.azure-pipelines/sdk-release.yml
@@ -47,7 +47,7 @@ extends:
   parameters:
     pool: $(BuildAgent)
     settings:
-      networkIsolationPolicy: Npm
+      networkIsolationPolicy: Permissive
     sdl:
       binskim:
         enabled: false
